<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Unblock Me</string>
    <string name="btn_play">Play</string>
    <string name="btn_about">About</string>
    <string name="btn_exit">Exit</string>
    <string name="logo">logo</string>
    <string name="ok">OK</string>
    <string name="team"><u>Membres de l\'équipe</u></string>
    <string name="pritam">Pritam Patel - 1933097</string>
    <string name="batikan">Batikan Iscan - 1955204</string>
    <string name="imad">Imad Berrahil - 2169358</string>
    <string name="simon">Simon Tran - 1961278</string>
    <string name="record">%1$s/%2$s</string>
    <string name="msg_win">You solved the puzzle in %1$d moves!</string>

</resources>
